// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Header /> render the basic <Header /> with a background 1`] = `
<div
  class="header__Background-djltcn-0 lglpeb"
  data-testid="header-bg"
>
  <div
    class="header__Container-djltcn-1 gnNVjt"
  >
    <p
      class="header__Link-djltcn-6 hdYwTX"
    >
      Hello I am a link!
    </p>
  </div>
</div>
`;

exports[`<Header /> render the basic <Header /> without a background 1`] = `
<div
  class="header__Container-djltcn-1 gnNVjt"
>
  <p
    class="header__Link-djltcn-6 ktcrzT"
  >
    Hello I am a link!
  </p>
</div>
`;

exports[`<Header /> renders the full <Header> with a background 1`] = `
<div
  class="header__Background-djltcn-0 dUzWEZ"
  data-testid="header-bg"
  src="joker1"
>
  <div
    class="header__Container-djltcn-1 gnNVjt"
  >
    <div
      class="header__Group-djltcn-8 bFaOer"
    >
      <p
        class="header__Link-djltcn-6 ktcrzT"
      >
        Series
      </p>
      <p
        class="header__Link-djltcn-6 ktcrzT"
      >
        Films
      </p>
    </div>
    <div
      class="header__Group-djltcn-8 bFaOer"
    >
      <div
        class="header__Search-djltcn-11 fbyXKp"
      >
        <button
          class="header__SearchIcon-djltcn-12 jDgbuc"
          data-testid="search-click"
        >
          <img
            alt="Search"
            src="/images/icons/search.png"
          />
        </button>
        <input
          class="header__SearchInput-djltcn-14 gpMqHq"
          data-testid="search-input"
          placeholder="Search films and series"
          value="Joker"
        />
      </div>
      <div
        class="header__Profile-djltcn-15 jQomNN"
      >
        <button
          class="header__Picture-djltcn-9 gIHqVJ"
          src="/images/users//images/karl.png.png"
        />
        <div
          class="header__Dropdown-djltcn-10 blIbwk"
        >
          <div
            class="header__Group-djltcn-8 bFaOer"
          >
            <button
              class="header__Picture-djltcn-9 gIHqVJ"
              src="/images/users//images/karl.png.png"
            />
            <p
              class="header__Link-djltcn-6 ktcrzT"
            >
              Karl Hadwen
            </p>
          </div>
          <div
            class="header__Group-djltcn-8 bFaOer"
          >
            <p
              class="header__Link-djltcn-6 ktcrzT"
            >
              Sign out
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="header__Container-djltcn-1 header__Feature-djltcn-4 gnNVjt hiaCZx"
  >
    <h2
      class="header__FeatureCallOut-djltcn-7 geVrgU"
    >
      Watch Joker Now
    </h2>
    <p
      class="header__Text-djltcn-5 zHXyP"
    >
      Forever alone in a crowd...
    </p>
    <button
      class="header__PlayButton-djltcn-13 hRbbto"
    >
      Play
    </button>
  </div>
</div>
`;
